--- a/dictionaries_dataframes_lecture.ipynb
+++ b/dictionaries_dataframes_lecture.ipynb
@@ -33,7 +33,8 @@
    "source": [
     "from helpers import check_venv, check_pandas\n",
     "if check_venv() and check_pandas():\n",
-    "    print('Virtual environment and pandas installation detected!')"
+    "    print('Virtual environment and pandas installation detected!') \n",
+    "    #hoi"
    ]
   },
   {
