--- a/dictionaries_dataframes_lecture.ipynb
+++ b/dictionaries_dataframes_lecture.ipynb
@@ -604,7 +604,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -618,12 +618,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c2ea10b92d699fc0581a30d88f3b645d375e24f96bc25a0c221cc302018960b7"
+    "hash": "3cf3be326c1fa509c732da81fced0267fb7d6c2e08685b4b22c367eaccea12d4"
    }
   }
  },
